collapse fix

--- a/src/sections/HomePage/HomePage.module.scss
+++ b/src/sections/HomePage/HomePage.module.scss
@@ -118,6 +118,12 @@
   }
 }
 
+.collapseBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .leftWrapper {
   width: 100%;
   height: 91vh;
